<resources>
    <string name="app_name">ClassSchedule</string>

    <string name="today">Сегодня</string>
    <string name="week">Неделя</string>

    <string name="start_time">Начало:</string>
    <string name="end_time">Конец:</string>
    <string name="classroom">Аудитория:</string>
    <string name="teacher">Преподаватель:</string>

    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="sunday">Воскресенье</string>

    <string name="chill">чииллл</string>
</resources>