<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_margin="16dp"
    android:background="@drawable/schedule_list_item_background"
    android:elevation="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/start_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_time"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/title" />

    <TextView
        android:id="@+id/start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/text_color"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/teacher" />

    <TextView
        android:id="@+id/end_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_time"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        app:layout_constraintTop_toBottomOf="@id/start_time_text"
        app:layout_constraintStart_toStartOf="@id/start_time_text" />

    <TextView
        android:id="@+id/end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/text_color"
        app:layout_constraintTop_toBottomOf="@id/start_time"
        app:layout_constraintStart_toStartOf="@id/teacher" />

    <TextView
        android:id="@+id/classroom_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classroom"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        app:layout_constraintTop_toBottomOf="@id/end_time_text"
        app:layout_constraintStart_toStartOf="@id/end_time_text" />

    <TextView
        android:id="@+id/classroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/text_color"
        app:layout_constraintTop_toBottomOf="@id/end_time"
        app:layout_constraintStart_toStartOf="@id/teacher" />

    <TextView
        android:id="@+id/teacher_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teacher"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        app:layout_constraintTop_toBottomOf="@id/classroom_text"
        app:layout_constraintStart_toStartOf="@id/classroom_text" />

    <TextView
        android:id="@+id/teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/text_color"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/classroom"
        app:layout_constraintStart_toEndOf="@id/teacher_text" />

    <ImageView
        android:id="@+id/chill_image"
        android:src="@drawable/cat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/chill_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chill"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#ffbf40"
        android:paddingEnd="16dp"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>